Added follwer, followee query and their swagger documentations
